<resources>
    <string name="app_name">kw2_vaschenkov_pv021</string>
    <string name="action_settings">Settings</string>
    <string name="action_animation">Animation</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Calculator</string>
    <string name="activity2">Files</string>
    <string name="activity3">Tabs</string>
    <string name="activity4">Coordinator</string>
    <string name="activity5">Threads</string>
    <string name="activity6">Handler|Message</string>
    <string name="names">Show names</string>
    <string name="tasks">Show tasks</string>
    <string name="files">Show files</string>
    <string name="create_file">Create file</string>
    <string name="listview">Show days of week</string>
    <string name="previous">Previous</string>
    <string name="action_info">Info</string>
    <string name="action_C">C</string>
    <string name="action_plus_minus">+/-</string>
    <string name="action_percent">%</string>
    <string name="action_div">/</string>
    <string name="action_mul">*</string>
    <string name="action_sub">-</string>
    <string name="action_sum">+</string>
    <string name="action_dot">.</string>
    <string name="action_eq">=</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_first_fragment">Welcome!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_files_fragment">Здесь можно создать файл</string>
    <string name="title_activity_main3">MainActivity3</string>
</resources>