<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_files_fragment"
        android:textAlignment="center"
        android:textSize="5mm" />

    <Button
        android:id="@+id/button_back"
        android:onClick="onClickToFirstActivity"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />

    <ListView
        android:id="@+id/lvProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="538dp"
        app:layout_constraintTop_toTopOf="parent"></ListView>

    <Button
        android:id="@+id/button_create_file"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="468dp"
        android:onClick="onClickCreateFile"
        android:text="@string/create_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_second" />
</FrameLayout>